--- a/index.html
+++ b/index.html
@@ -720,9 +720,8 @@
                 <div class="about-text">
                     <p>Я занимаюсь созданием красивых, удобных и современных сайтов. Люблю чистый код, минимализм и новые технологии. Готов реализовать ваши идеи!</p>
                     <div class="social-links">
-                        <a href="https://t.me/username" target="_blank" title="Telegram"><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 2L11 13"/><path d="M22 2L15 22L11 13L2 9L22 2Z"/></svg></a>
-                        <a href="https://github.com/username" target="_blank" title="GitHub"><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.09.66-.22.66-.48 0-.24-.01-.87-.01-1.7-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.1-1.46-1.1-1.46-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.34 1.08 2.91.83.09-.65.35-1.08.63-1.33-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0112 6.8c.85.004 1.71.11 2.51.32 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85 0 1.33-.01 2.4-.01 2.73 0 .27.16.58.67.48A10.01 10.01 0 0022 12c0-5.52-4.48-10-10-10z"/></svg></a>
-                        <a href="https://www.linkedin.com/in/username" target="_blank" title="LinkedIn"><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-4 0v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></a>
+                        <a href="https://github.com/KNurZh" target="_blank" title="GitHub"><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.09.66-.22.66-.48 0-.24-.01-.87-.01-1.7-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.1-1.46-1.1-1.46-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.34 1.08 2.91.83.09-.65.35-1.08.63-1.33-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0112 6.8c.85.004 1.71.11 2.51.32 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85 0 1.33-.01 2.4-.01 2.73 0 .27.16.58.67.48A10.01 10.01 0 0022 12c0-5.52-4.48-10-10-10z"/></svg></a>
+                        <a href="https://wa.me/87753682628?text=%D1%85%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%D0%B0%D1%82%D1%8C%20%D1%81%D0%B0%D0%B9%D1%82" target="_blank" title="WhatsApp"><svg width="1em" height="1em" viewBox="0 0 32 32" fill="none"><circle cx="16" cy="16" r="16" fill="#25D366"/><path d="M24.5 19.5c-.3-.2-1.7-.8-2-1-.3-.1-.5-.2-.7.2-.2.3-.7 1-1 1.2-.2.2-.4.2-.7.1-.8-.3-1.6-.6-2.3-1.2-.6-.5-1.1-1.1-1.5-1.7-.2-.3-.2-.5.1-.8.2-.2.4-.5.5-.7.1-.2.1-.4 0-.6-.1-.2-.7-1.7-.9-2.3-.2-.5-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.1 1-1.1 2.4 0 1.4 1 2.8 1.2 3.1.2.2 2.1 3.2 5.1 4.2.7.3 1.2.4 1.6.5.7.2 1.3.2 1.8.1.5-.1 1.7-.7 1.9-1.4.2-.6.2-1.2.1-1.3-.1-.1-.3-.2-.6-.3z" fill="#fff"/></svg></a>
                     </div>
                 </div>
             </div>
@@ -757,7 +756,6 @@
                     <h3>Сайт-визитка</h3>
                     <p>Минималистичный сайт для презентации услуг и контактов.</p>
                     <div class="project-links">
-                        <a href="#" target="_blank">Демо</a>
                         <a href="#" target="_blank">GitHub</a>
                     </div>
                 </div>
@@ -765,7 +763,6 @@
                     <h3>Интернет-магазин</h3>
                     <p>Магазин с корзиной, фильтрами и адаптивной версткой.</p>
                     <div class="project-links">
-                        <a href="#" target="_blank">Демо</a>
                         <a href="#" target="_blank">GitHub</a>
                     </div>
                 </div>
@@ -773,7 +770,6 @@
                     <h3>Лендинг для мероприятия</h3>
                     <p>Яркий лендинг с анимациями и формой обратной связи.</p>
                     <div class="project-links">
-                        <a href="#" target="_blank">Демо</a>
                         <a href="#" target="_blank">GitHub</a>
                     </div>
                 </div>
@@ -781,7 +777,6 @@
                     <h3>Корпоративный сайт</h3>
                     <p>Сайт для компании с блогом, разделом новостей и личным кабинетом.</p>
                     <div class="project-links">
-                        <a href="#" target="_blank">Демо</a>
                         <a href="#" target="_blank">GitHub</a>
                     </div>
                 </div>
@@ -836,36 +831,19 @@
             <h2>Контакты</h2>
             <div class="contacts-info">
                 <div class="contacts-info-item">
-                    <!-- Локация: современная иконка -->
-                    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 21c-4.418 0-8-4.03-8-9a8 8 0 1116 0c0 4.97-3.582 9-8 9z"/><circle cx="12" cy="12" r="3"/></svg>
-                    <span>г. Алматы</span>
-                </div>
-                <div class="contacts-info-item">
-                    <!-- Email: современная иконка -->
-                    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="5" width="18" height="14" rx="3"/><polyline points="3 7 12 13 21 7"/></svg>
-                    <span>nurdaulet@email.com</span>
-                </div>
-                <div class="contacts-info-item">
-                    <!-- Телефон: современная иконка -->
-                    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92V19a2 2 0 0 1-2.18 2A19.72 19.72 0 0 1 3 5.18 2 2 0 0 1 5 3h2.09a2 2 0 0 1 2 1.72c.13.81.36 1.6.68 2.34a2 2 0 0 1-.45 2.11l-.27.27a16 16 0 0 0 6.29 6.29l.27-.27a2 2 0 0 1 2.11-.45c.74.32 1.53.55 2.34.68A2 2 0 0 1 22 16.92z"/></svg>
-                    <span>+7 777 123 45 67</span>
+                    <!-- WhatsApp: линейная иконка -->
+                    <a href="https://wa.me/87753682628?text=%D1%85%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%D0%B0%D1%82%D1%8C%20%D1%81%D0%B0%D0%B9%D1%82" target="_blank" title="WhatsApp"><svg width="1em" height="1em" viewBox="0 0 32 32" fill="none"><circle cx="16" cy="16" r="16" fill="#25D366"/><path d="M24.5 19.5c-.3-.2-1.7-.8-2-1-.3-.1-.5-.2-.7.2-.2.3-.7 1-1 1.2-.2.2-.4.2-.7.1-.8-.3-1.6-.6-2.3-1.2-.6-.5-1.1-1.1-1.5-1.7-.2-.3-.2-.5.1-.8.2-.2.4-.5.5-.7.1-.2.1-.4 0-.6-.1-.2-.7-1.7-.9-2.3-.2-.5-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.1 1-1.1 2.4 0 1.4 1 2.8 1.2 3.1.2.2 2.1 3.2 5.1 4.2.7.3 1.2.4 1.6.5.7.2 1.3.2 1.8.1.5-.1 1.7-.7 1.9-1.4.2-.6.2-1.2.1-1.3-.1-.1-.3-.2-.6-.3z" fill="#fff"/></svg></a>
+                    <a href="https://wa.me/87753682628?text=%D1%85%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%D0%B0%D1%82%D1%8C%20%D1%81%D0%B0%D0%B9%D1%82" target="_blank" style="color:inherit;text-decoration:underline;font-weight:600;">WhatsApp: 8&nbsp;775&nbsp;368&nbsp;26&nbsp;28</a>
                 </div>
             </div>
-            <form class="contacts-form" autocomplete="off" onsubmit="event.preventDefault();alert('Спасибо за сообщение!');">
-                <input type="text" name="name" placeholder="Ваше имя" required>
-                <input type="email" name="email" placeholder="Ваш email" required>
-                <textarea name="message" rows="4" placeholder="Ваше сообщение" required></textarea>
-                <button type="submit">Отправить</button>
-                <div class="form-status" style="display:none;margin-top:10px;"></div>
-            </form>
+            <div style="margin-top:18px;font-size:1.08rem;color:#3730a3;font-weight:500;">Связаться можно только через WhatsApp</div>
         </section>
     </div>
     <footer>
         &copy; 2025 Нурдаулет Косым | Все права защищены
         <div class="footer-social">
-            <a href="https://t.me/username" target="_blank" title="Telegram"><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 2L11 13"/><path d="M22 2L15 22L11 13L2 9L22 2Z"/></svg></a>
             <a href="https://github.com/username" target="_blank" title="GitHub"><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.09.66-.22.66-.48 0-.24-.01-.87-.01-1.7-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.1-1.46-1.1-1.46-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.34 1.08 2.91.83.09-.65.35-1.08.63-1.33-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0112 6.8c.85.004 1.71.11 2.51.32 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85 0 1.33-.01 2.4-.01 2.73 0 .27.16.58.67.48A10.01 10.01 0 0022 12c0-5.52-4.48-10-10-10z"/></svg></a>
-            <a href="https://www.linkedin.com/in/username" target="_blank" title="LinkedIn"><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-4 0v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></a>
+            <a href="https://wa.me/87753682628?text=%D1%85%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%D0%B0%D1%82%D1%8C%20%D1%81%D0%B0%D0%B9%D1%82" target="_blank" title="WhatsApp"><svg width="1em" height="1em" viewBox="0 0 32 32" fill="none"><circle cx="16" cy="16" r="16" fill="#25D366"/><path d="M24.5 19.5c-.3-.2-1.7-.8-2-1-.3-.1-.5-.2-.7.2-.2.3-.7 1-1 1.2-.2.2-.4.2-.7.1-.8-.3-1.6-.6-2.3-1.2-.6-.5-1.1-1.1-1.5-1.7-.2-.3-.2-.5.1-.8.2-.2.4-.5.5-.7.1-.2.1-.4 0-.6-.1-.2-.7-1.7-.9-2.3-.2-.5-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.1 1-1.1 2.4 0 1.4 1 2.8 1.2 3.1.2.2 2.1 3.2 5.1 4.2.7.3 1.2.4 1.6.5.7.2 1.3.2 1.8.1.5-.1 1.7-.7 1.9-1.4.2-.6.2-1.2.1-1.3-.1-.1-.3-.2-.6-.3z" fill="#fff"/></svg></a>
         </div>
     </footer>
     <button id="toTopBtn" title="Наверх">↑</button>
