--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ccircle cx='32' cy='32' r='30' fill='%234f46e5'/%3E%3Ctext x='32' y='42' font-size='32' text-anchor='middle' fill='white' font-family='Montserrat,Arial,sans-serif'%3E%F0%9F%91%BB%3C/text%3E%3C/svg%3E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио | Суперсайт</title>
+    <title>Портфолио | Косым Нурдаулет</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body.night,
