--- a/index.html
+++ b/index.html
@@ -842,8 +842,8 @@
     <footer>
         &copy; 2025 Нурдаулет Косым | Все права защищены
         <div class="footer-social">
+            <a href="https://github.com/username" target="_blank" title="GitHub"><svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.09.66-.22.66-.48 0-.24-.01-.87-.01-1.7-2.78.6-3.37-1.34-3.37-1.34-.45-1.15-1.1-1.46-1.1-1.46-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.34 1.08 2.91.83.09-.65.35-1.08.63-1.33-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0112 6.8c.85.004 1.71.11 2.51.32 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85 0 1.33-.01 2.4-.01 2.73 0 .27.16.58.67.48A10.01 10.01 0 0022 12c0-5.52-4.48-10-10-10z"/></svg></a>
             <a href="https://wa.me/77753682628?text=%D1%85%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%D0%B0%D1%82%D1%8C%20%D1%81%D0%B0%D0%B9%D1%82" target="_blank" title="WhatsApp"><svg width="1em" height="1em" viewBox="0 0 28 28" fill="none"><circle cx="14" cy="14" r="12.25" stroke="#25D366" stroke-width="1.5" fill="none"/><path d="M19.2 16.2c-.3-.15-1.5-.75-1.8-.85-.3-.1-.5-.15-.7.15-.2.3-.8 1-1 1.2-.2.2-.4.25-.7.1-.8-.3-1.7-.65-2.4-1.35-.9-.8-1.5-1.8-1.7-2.1-.2-.3-.02-.5.13-.65.13-.13.3-.35.45-.5.15-.18.2-.3.3-.5.1-.2.05-.37-.03-.52-.08-.15-.7-1.6-.93-2.2-.23-.58-.48-.5-.67-.52-.2-.01-.4-.01-.6-.01-.2 0-.52.08-.8.35-.28.28-1.02 1-1.02 2.5 0 1.5 1.08 2.88 1.23 3.08.15.2 2.12 3.23 5.15 4.4.72.3 1.29.48 1.73.62.72.23 1.37.2 1.88.12.57-.09 1.78-.73 2.03-1.44.25-.71.25-1.32.17-1.44-.08-.12-.27-.18-.57-.33z" fill="#25D366"/></svg></a>
-            <a href="https://wa.me/77753682628?text=%D1%85%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%D0%B0%D1%82%D1%8C%20%D1%81%D0%B0%D0%B9%D1%82" target="_blank" title="WhatsApp"><svg width="1em" height="1em" viewBox="0 0 32 32" fill="none"><circle cx="16" cy="16" r="16" fill="#25D366"/><path d="M24.5 19.5c-.3-.2-1.7-.8-2-1-.3-.1-.5-.2-.7.2-.2.3-.7 1-1 1.2-.2.2-.4.2-.7.1-.8-.3-1.6-.6-2.3-1.2-.6-.5-1.1-1.1-1.5-1.7-.2-.3-.2-.5.1-.8.2-.2.4-.5.5-.7.1-.2.1-.4 0-.6-.1-.2-.7-1.7-.9-2.3-.2-.5-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.1 1-1.1 2.4 0 1.4 1 2.8 1.2 3.1.2.2 2.1 3.2 5.1 4.2.7.3 1.2.4 1.6.5.7.2 1.3.2 1.8.1.5-.1 1.7-.7 1.9-1.4.2-.6.2-1.2.1-1.3-.1-.1-.3-.2-.6-.3z" fill="#fff"/></svg></a>
         </div>
     </footer>
     <button id="toTopBtn" title="Наверх">↑</button>
@@ -1100,5 +1100,6 @@ toTopBtn.onclick = () => window.scrollTo({top:0,behavior:'smooth'});
 </body>
 
 </html>
+
 
 
