--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
     <section class="about section fade-in" id="about">
             <h2>Обо мне</h2>
             <div class="about-content">
-                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Фото Нурдаулет Косым" class="about-photo">
+                <img src="https://png.klev.club/uploads/posts/2024-04/thumbs/png-klev-club-vrj4-p-avatarka-png-28.png" alt="Фото Нурдаулет Косым" class="about-photo">
                 <div class="about-text">
                     <p>Я занимаюсь созданием красивых, удобных и современных сайтов. Люблю чистый код, минимализм и новые технологии. Готов реализовать ваши идеи!</p>
                     <div class="social-links">
@@ -1100,6 +1100,7 @@ toTopBtn.onclick = () => window.scrollTo({top:0,behavior:'smooth'});
 </body>
 
 </html>
+
 
 
 
